add user support

--- a/templates/habits_trainer/task_form.html
+++ b/templates/habits_trainer/task_form.html
@@ -1,6 +1,6 @@
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
-
+    {% csrf_token %}
 
     <input type="submit" value="Save2">
 </form>
