--- a/templates/habits_trainer/task_list.html
+++ b/templates/habits_trainer/task_list.html
@@ -1,3 +1,5 @@
+<h2>Task</h2>
+
 <ul>
 
     {% for object in object_list %}
@@ -8,4 +10,7 @@
 
 </ul>
 
-hallo
+<h2>Funktionen</h2>
+
+<a href="{% url  'habits_trainer:task_add' %}">New Task</a>
+<br>
