--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,9 @@
-<!-- templates/registration/login.html -->
-<h2>Log In</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Log In</button>
-</form>
+{% extends "habits_trainer/base.html" %}
+{% block content %}
+    <h2>Log In</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Log In</button>
+    </form>
+{% endblock %}
