add logout function

--- a/templates/habits_trainer/base.html
+++ b/templates/habits_trainer/base.html
@@ -14,6 +14,7 @@
             <li><a href="{% url  'habits_trainer:allTask' %}">Alle Tasks</a></li>
             <li><a href="{% url  'habits_trainer:actuallTask' %}">Aktuelle Task</a></li>
             <li><a href="{% url  'password_change' %}">Password ändern 😛</a></li>
+            <li><a href="{% url  'logout' %}">Logout</a></li>
         </ul>
     {% endblock %}
 </div>
