github action test

--- a/templates/habits_trainer/task_form.html
+++ b/templates/habits_trainer/task_form.html
@@ -4,6 +4,6 @@
         {{ form.as_p }}
         {% csrf_token %}
 
-        <input type="submit" value="Save2">
+        <input type="submit" value="Save">
     </form>
 {% endblock %}
