--- a/templates/habits_trainer/base.html
+++ b/templates/habits_trainer/base.html
@@ -12,6 +12,7 @@
         <ul>
             <li>aktueller Nutzer: {{ user }}</li>
             <li><a href="{% url  'admin:index' %}">Admin</a></li>
+            <li><a href="{% url  'habits_trainer:bestTask' %}">Your Best Choice</a></li>
             <li><a href="{% url  'habits_trainer:allTask' %}">Alle Tasks</a></li>
             <li><a href="{% url  'habits_trainer:actuallTask' %}">Aktuelle Task</a></li>
             <li><a href="{% url  'admin:password_change' %}">Password ändern 😛</a></li>
