--- a/templates/habits_trainer/best_task.html
+++ b/templates/habits_trainer/best_task.html
@@ -8,7 +8,8 @@
             <a href="{% url  'habits_trainer:task_done' task.id %}?next={{ request.path }}">Erledigt(heute)</a>
             <br>
             <a href="{% url  'habits_trainer:task_snoze' task.id %}?next={{ request.path }}">Verschieben</a>
-        {% else %}<p>Du bist auf dem aktuellen Stand. Es sind keine Aufgaben mehr offen.</p>
+        {% else %}<p>Du bist auf dem aktuellen Stand. Es sind keine Aufgaben mehr offen. Bis zur nächsten
+            Aufgabe sind es noch <b>{{ nextDoDate|timeuntil }}</b>.</p>
         {% endif %}
     {% endwith %}
 {% endblock %}
