limiting access to actualTask, just showing bestTask

--- a/templates/habits_trainer/base.html
+++ b/templates/habits_trainer/base.html
@@ -14,7 +14,7 @@
             <li><a href="{% url  'admin:index' %}">Admin</a></li>
             <li><a href="{% url  'habits_trainer:bestTask' %}">Your Best Choice</a></li>
             <li><a href="{% url  'habits_trainer:allTask' %}">Alle Tasks</a></li>
-            <li><a href="{% url  'habits_trainer:actuallTask' %}">Aktuelle Task</a></li>
+            {#            <li><a href="{% url  'habits_trainer:actuallTask' %}">Aktuelle Task</a></li>#}
             <li><a href="{% url  'admin:password_change' %}">Password ändern 😛</a></li>
             <li><a href="{% url  'admin:logout' %}">Logout</a></li>
         </ul>
