--- a/templates/habits_trainer/base.html
+++ b/templates/habits_trainer/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <link rel="stylesheet" href="style.css">
     <title>{% block title %}My amazing site{% endblock %}</title>
 </head>
@@ -28,5 +29,71 @@
 </div>
 
 <hr>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-messaging.js"></script>
+
+
+<script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+        apiKey: "AIzaSyDqGeN35kg87RbCnMZNqXVj4Gvjfs9-_Ms",
+        authDomain: "habit-trainer-316412.firebaseapp.com",
+        projectId: "habit-trainer-316412",
+        storageBucket: "habit-trainer-316412.appspot.com",
+        messagingSenderId: "1030268063447",
+        appId: "1:1030268063447:web:620644db865b379ba82a92",
+        measurementId: "G-9M0KYCKB3Y"
+    };
+    // Initialize Firebase
+
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+
+    const messaging = firebase.messaging();
+    messaging.getToken({vapidKey: "BFmjHOk3Kzia-BhmKbGOQC3frgMAFfA0clPKHPjbw2o3Ll1oNqn7yMGlrmR6KhcMpzpeCd0kmzM1FjSthY8KgF8"}).then((currentToken) => {
+        if (currentToken) {
+            // Send the token to your server and update the UI if necessary
+            console.log(currentToken);
+            // ...
+        } else {
+            // Show permission request UI
+            //askPermission()
+            console.log('No registration token available. Request permission to generate one.');
+            // ...
+        }
+    }).catch((err) => {
+        console.log('An error occurred while retrieving token. ', err);
+        // ...
+    });
+    ;
+
+    testServices()
+
+    function testServices() {
+
+        if (!('serviceWorker' in navigator)) {
+            // Service Worker isn't supported on this browser, disable or hide UI.
+            console.log('Service Worker isnt supported on this browser, disable or hide UI');
+            return;
+        }
+
+        if (!('PushManager' in window)) {
+            console.log('Push isnt supported on this browser, disable or hide UI.');
+            // Push isn't supported on this browser, disable or hide UI.
+            return;
+        }
+
+    }
+
+</script>
+
+
 </body>
 </html>
