--- a/templates/habits_trainer/base.html
+++ b/templates/habits_trainer/base.html
@@ -36,31 +36,18 @@
 
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+<script src="/__/firebase/8.8.1/firebase-app.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-analytics.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-messaging.js"></script>
+<script src="/__/firebase/8.8.1/firebase-analytics.js"></script>
+<script src="/__/firebase/8.8.1/firebase-messaging.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 
 
 <script>
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    var firebaseConfig = {
-        apiKey: "AIzaSyDqGeN35kg87RbCnMZNqXVj4Gvjfs9-_Ms",
-        authDomain: "habit-trainer-316412.firebaseapp.com",
-        projectId: "habit-trainer-316412",
-        storageBucket: "habit-trainer-316412.appspot.com",
-        messagingSenderId: "1030268063447",
-        appId: "1:1030268063447:web:620644db865b379ba82a92",
-        measurementId: "G-9M0KYCKB3Y"
-    };
-    // Initialize Firebase
-
-
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
 
     const messaging = firebase.messaging();
 
