adding more firebase.analytics event logging's

--- a/templates/habits_trainer/base.html
+++ b/templates/habits_trainer/base.html
@@ -68,6 +68,14 @@
 
     const analytics = firebase.analytics();
 
+    {% if user.is_authenticated %}
+
+        analytics.setUserId({{ user.pk}})
+
+    {% endif %}
+
+
+
     messaging.onMessage((payload) => {
         console.log('Message received. ', payload);
         // ...
