--- a/templates/habits_trainer/base.html
+++ b/templates/habits_trainer/base.html
@@ -42,6 +42,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-analytics.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-messaging.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-performance.js"></script>
 
 
 <script>
@@ -67,6 +68,8 @@
     const messaging = firebase.messaging();
 
     const analytics = firebase.analytics();
+
+    const perf = firebase.performance();
 
     {% if user.is_authenticated %}
 
