--- a/templates/habits_trainer/base.html
+++ b/templates/habits_trainer/base.html
@@ -292,10 +292,10 @@
 
 
     analytics.logEvent({% block analytics_event %}{% endblock %}, {
-        'appVersion': '0.3',
-        'app_version': '0.0.2',
-        'appName': 'appName',
-        'app_name': 'app_name', {% block analytics_event_params %}{% endblock %}
+        appVersion: '0.3',
+        app_version: '0.0.2',
+        appName: 'appName',
+        app_name: 'app_name', {% block analytics_event_params %}{% endblock %}
     });
 
 </script>
